--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+        // --- 1. CONFIG (Dán config của bạn vào đây) ---
+        
+      <!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Private Timeline</title>
+    <title>Timeline Notes Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -13,8 +15,9 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap');
-        body { font-family: 'Lexend', sans-serif; background-color: #f9fafb; }
+        body { font-family: 'Lexend', sans-serif; background-color: #f9fafb; scroll-behavior: smooth; }
         .sticky-date { position: sticky; top: 64px; z-index: 10; background: rgba(249, 250, 251, 0.9); backdrop-filter: blur(10px); }
+        .note-card:hover .delete-btn { opacity: 1; }
     </style>
 </head>
 <body>
@@ -23,8 +26,8 @@
     <script type="text/babel">
         const { useState, useEffect, useMemo } = React;
 
-        // --- 1. CONFIG (Dán config của bạn vào đây) ---
-        const firebaseConfig = {
+        // --- 1. CONFIG FIREBASE (DÁN CỦA BẠN VÀO ĐÂY) ---
+       const firebaseConfig = {
           apiKey: "AIzaSyAV-XVaOyUiq1c-29VTaWjLKcEXrssnnTE",
           authDomain: "qlhs10a7.firebaseapp.com",
           projectId: "qlhs10a7",
@@ -33,6 +36,8 @@
           appId: "1:584229565603:web:d47a10f0a512a1a309bb16",
           measurementId: "G-8E5E1933DE"
         }; 
+
+        // Khởi tạo Firebase
         if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         const auth = firebase.auth();
@@ -52,14 +57,11 @@
                 });
             }, []);
 
-            // Lấy dữ liệu theo userId
+            // Lấy dữ liệu từ Cloud (Chỉ lấy của User hiện tại)
             useEffect(() => {
-                if (!user) {
-                    setNotes([]);
-                    return;
-                }
+                if (!user) { setNotes([]); return; }
                 const unsubscribe = db.collection("notes")
-                    .where("userId", "==", user.uid) // Chỉ lấy của mình
+                    .where("userId", "==", user.uid)
                     .orderBy("timestamp", "desc")
                     .onSnapshot((s) => {
                         setNotes(s.docs.map(d => ({ id: d.id, ...d.data() })));
@@ -67,21 +69,26 @@
                 return () => unsubscribe();
             }, [user]);
 
-            const handleLogin = () => auth.signInWithPopup(provider);
+            const handleLogin = () => auth.signInWithPopup(provider).catch(err => alert("Lỗi đăng nhập: " + err.message));
             const handleLogout = () => auth.signOut();
 
             const handleSubmit = async (e) => {
                 e.preventDefault();
                 if (!text.trim() || !user) return;
                 const now = new Date();
-                await db.collection("notes").add({
-                    content: text,
-                    userId: user.uid, // Lưu thêm ID người dùng
-                    date: now.toISOString().split('T')[0],
-                    time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
-                    timestamp: firebase.firestore.FieldValue.serverTimestamp()
-                });
-                setText("");
+                try {
+                    await db.collection("notes").add({
+                        content: text,
+                        userId: user.uid, // Định danh chủ sở hữu
+                        date: now.toISOString().split('T')[0],
+                        time: now.toLocaleTimeString('vi-VN', { hour: '2-digit', minute: '2-digit' }),
+                        timestamp: firebase.firestore.FieldValue.serverTimestamp()
+                    });
+                    setText("");
+                    window.scrollTo(0, 0);
+                } catch (err) {
+                    alert("Lỗi lưu dữ liệu. Hãy kiểm tra lại Rules trên Firebase!");
+                }
             };
 
             const groupedNotes = useMemo(() => {
@@ -93,41 +100,65 @@
                 }, {});
             }, [notes]);
 
-            if (loading) return <div className="flex h-screen items-center justify-center">Đang tải...</div>;
+            if (loading) return <div className="flex h-screen items-center justify-center text-blue-500 font-bold">ĐANG KẾT NỐI...</div>;
 
             if (!user) return (
                 <div className="flex h-screen flex-col items-center justify-center p-6 text-center">
-                    <h1 className="text-3xl font-black mb-4">TIMELINE NOTES</h1>
-                    <p className="text-gray-500 mb-8">Lưu trữ dòng thời gian riêng tư của bạn</p>
-                    <button onClick={handleLogin} className="flex items-center gap-3 bg-white border border-gray-300 px-6 py-3 rounded-2xl shadow-sm hover:bg-gray-50 transition-all font-bold">
+                    <div className="w-20 h-20 bg-blue-600 rounded-3xl mb-6 shadow-xl flex items-center justify-center text-white text-4xl font-black">T</div>
+                    <h1 className="text-3xl font-black mb-2 tracking-tighter">TIMELINE NOTES</h1>
+                    <p className="text-gray-400 mb-8 max-w-xs">Nhật ký dòng thời gian cá nhân. Bảo mật và đồng bộ đám mây.</p>
+                    <button onClick={handleLogin} className="flex items-center gap-3 bg-white border border-gray-200 px-8 py-4 rounded-2xl shadow-sm hover:shadow-md transition-all font-bold text-gray-700">
                         <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" />
-                        Đăng nhập bằng Google
+                        Tiếp tục với Google
                     </button>
                 </div>
             );
 
             return (
-                <div className="max-w-xl mx-auto pb-32">
-                    <header className="sticky top-0 bg-white/70 backdrop-blur-md px-6 py-4 flex justify-between items-center z-30 border-b border-gray-100">
+                <div className="max-w-xl mx-auto pb-40">
+                    <header className="sticky top-0 bg-white/80 backdrop-blur-lg px-6 py-4 flex justify-between items-center z-30 border-b border-gray-100">
                         <div className="flex items-center gap-3">
-                            <img src={user.photoURL} className="w-8 h-8 rounded-full" title={user.displayName} />
-                            <h1 className="text-xl font-extrabold tracking-tighter">TIMELINE</h1>
+                            <img src={user.photoURL} className="w-9 h-9 rounded-full border-2 border-blue-100" />
+                            <div>
+                                <h1 className="text-lg font-black tracking-tighter leading-none">TIMELINE</h1>
+                                <span className="text-[10px] text-gray-400 font-medium italic">Ghi chép của {user.displayName.split(' ').pop()}</span>
+                            </div>
                         </div>
-                        <button onClick={handleLogout} className="text-xs text-gray-400 hover:text-red-500">Đăng xuất</button>
+                        <button onClick={handleLogout} className="p-2 hover:bg-red-50 rounded-xl transition-colors group">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-5 h-5 text-gray-400 group-hover:text-red-500">
+                                <path strokeLinecap="round" strokeLinejoin="round" d="M15.75 9V5.25A2.25 2.25 0 0013.5 3h-6a2.25 2.25 0 00-2.25 2.25v13.5A2.25 2.25 0 007.5 21h6a2.25 2.25 0 002.25-2.25V15m3 0l3-3m0 0l-3-3m3 3H9" />
+                            </svg>
+                        </button>
                     </header>
 
-                    <main className="px-4 mt-4">
+                    <main className="px-4 mt-2">
+                        {notes.length === 0 && (
+                            <div className="text-center py-32">
+                                <div className="text-gray-200 text-6xl mb-4">✍️</div>
+                                <p className="text-gray-400 text-sm italic">Hôm nay bạn đang nghĩ gì?</p>
+                            </div>
+                        )}
+
                         {Object.keys(groupedNotes).map(date => (
-                            <div key={date} className="mb-8">
-                                <h2 className="sticky-date py-3 text-sm font-black text-gray-400 uppercase">{date}</h2>
+                            <div key={date} className="mb-10">
+                                <h2 className="sticky-date py-4 text-xs font-black text-blue-400 uppercase tracking-[0.2em]">
+                                    {new Date(date).toLocaleDateString('vi-VN', { weekday: 'long', day: '2-digit', month: '2-digit' })}
+                                </h2>
                                 <div className="space-y-4">
                                     {groupedNotes[date].map(note => (
-                                        <div key={note.id} className="bg-white p-5 rounded-3xl shadow-sm border border-gray-50 group">
-                                            <div className="flex justify-between mb-2">
-                                                <span className="text-[10px] font-bold text-blue-500 bg-blue-50 px-2 rounded-full">{note.time}</span>
-                                                <button onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()} className="opacity-0 group-hover:opacity-100 text-red-400 text-xs transition-all">Xóa</button>
+                                        <div key={note.id} className="note-card bg-white p-6 rounded-[2rem] shadow-sm border border-gray-50 transition-all hover:border-blue-100 relative overflow-hidden">
+                                            <div className="flex justify-between items-center mb-3">
+                                                <span className="text-[10px] font-bold text-gray-300 uppercase tracking-widest">{note.time}</span>
+                                                <button 
+                                                    onClick={() => confirm('Xóa vĩnh viễn ghi chú này?') && db.collection("notes").doc(note.id).delete()} 
+                                                    className="delete-btn opacity-0 text-red-300 hover:text-red-500 transition-all p-1"
+                                                >
+                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-4 h-4">
+                                                        <path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                                    </svg>
+                                                </button>
                                             </div>
-                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap">{note.content}</p>
+                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap font-light text-[15px]">{note.content}</p>
                                         </div>
                                     ))}
                                 </div>
@@ -135,16 +166,21 @@
                         ))}
                     </main>
 
-                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50">
-                        <form onSubmit={handleSubmit} className="max-w-xl mx-auto relative">
+                    {/* Input Area */}
+                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50/95 to-transparent z-40">
+                        <form onSubmit={handleSubmit} className="max-w-xl mx-auto relative group">
                             <textarea 
-                                value={text} onChange={(e) => setText(e.target.value)}
-                                onKeyDown={(e) => e.key === 'Enter' && !e.shiftKey && (e.preventDefault(), handleSubmit(e))}
-                                placeholder="Viết gì đó cho hôm nay..."
-                                className="w-full bg-white shadow-2xl rounded-3xl p-5 pr-16 outline-none border border-gray-100 resize-none" rows="1"
+                                value={text} 
+                                onChange={(e) => setText(e.target.value)}
+                                onKeyDown={(e) => { if(e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleSubmit(e); } }}
+                                placeholder="Ghi chép nhanh..."
+                                className="w-full bg-white shadow-[0_20px_50px_rgba(0,0,0,0.1)] rounded-[2.5rem] p-6 pr-20 outline-none border border-white focus:border-blue-200 transition-all resize-none min-h-[70px] max-h-40"
+                                rows="1"
                             />
-                            <button className="absolute right-3 bottom-3 bg-blue-600 text-white w-10 h-10 rounded-2xl flex items-center justify-center hover:bg-blue-700 shadow-lg">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-5 h-5"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
+                            <button className="absolute right-4 bottom-4 bg-blue-600 text-white w-12 h-12 rounded-[1.5rem] flex items-center justify-center hover:bg-blue-700 shadow-lg shadow-blue-200 transition-all active:scale-95">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-6 h-6 leading-none">
+                                    <path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" />
+                                </svg>
                             </button>
                         </form>
                     </div>
@@ -157,4 +193,3 @@
     </script>
 </body>
 </html>
-
