--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-       <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="vi">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Cloud Timeline</title>
+    <title>Timeline Notes Pro</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore-compat.js"></script>
@@ -13,8 +13,10 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Lexend:wght@300;400;600;800&display=swap');
-        body { font-family: 'Lexend', sans-serif; background-color: #f9fafb; }
+        body { font-family: 'Lexend', sans-serif; background-color: #f9fafb; scroll-behavior: smooth; }
         .sticky-date { position: sticky; top: 64px; z-index: 10; background: rgba(249, 250, 251, 0.9); backdrop-filter: blur(10px); }
+        .note-card:hover .delete-btn { opacity: 1; }
+        textarea::placeholder { color: #cbd5e1; }
     </style>
 </head>
 <body>
@@ -23,15 +25,17 @@
     <script type="text/babel">
         const { useState, useEffect, useMemo } = React;
 
+        // --- CẤU HÌNH FIREBASE ĐÃ TÍCH HỢP ---
         const firebaseConfig = {
-          apiKey: "AIzaSyAV-XVaOyUiq1c-29VTaWjLKcEXrssnnTE",
-          authDomain: "qlhs10a7.firebaseapp.com",
-          projectId: "qlhs10a7",
-          storageBucket: "qlhs10a7.firebasestorage.app",
-          messagingSenderId: "584229565603",
-          appId: "1:584229565603:web:d47a10f0a512a1a309bb16",
-          measurementId: "G-8E5E1933DE"
-        }; 
+            apiKey: "AIzaSyAV-XVaOyUiq1c-29VTaWjLKcEXrssnnTE",
+            authDomain: "qlhs10a7.firebaseapp.com",
+            projectId: "qlhs10a7",
+            storageBucket: "qlhs10a7.firebasestorage.app",
+            messagingSenderId: "584229565603",
+            appId: "1:584229565603:web:d47a10f0a512a1a309bb16",
+            measurementId: "G-8E5E1933DE"
+        };
+
         if (!firebase.apps.length) firebase.initializeApp(firebaseConfig);
         const db = firebase.firestore();
         const auth = firebase.auth();
@@ -50,11 +54,9 @@
                 });
             }, []);
 
-            // --- TRUY VẤN DỮ LIỆU ---
             useEffect(() => {
-                if (!user) return;
+                if (!user) { setNotes([]); return; }
                 
-                // Lắng nghe dữ liệu theo thời gian thực
                 const unsubscribe = db.collection("notes")
                     .where("userId", "==", user.uid)
                     .onSnapshot((snapshot) => {
@@ -62,11 +64,10 @@
                             id: doc.id,
                             ...doc.data()
                         }));
-                        // Sắp xếp thủ công nếu Firebase chưa kịp tạo Index
                         const sortedData = data.sort((a, b) => {
-                            const timeA = a.timestamp?.seconds || 0;
-                            const timeB = b.timestamp?.seconds || 0;
-                            return timeB - timeA;
+                            const tA = a.timestamp?.seconds || 0;
+                            const tB = b.timestamp?.seconds || 0;
+                            return tB - tA;
                         });
                         setNotes(sortedData);
                     }, (err) => {
@@ -74,6 +75,9 @@
                     });
                 return () => unsubscribe();
             }, [user]);
+
+            const handleLogin = () => auth.signInWithPopup(provider).catch(err => alert("Lỗi: " + err.message));
+            const handleLogout = () => auth.signOut();
 
             const handleSubmit = async (e) => {
                 e.preventDefault();
@@ -88,7 +92,9 @@
                         timestamp: firebase.firestore.FieldValue.serverTimestamp()
                     });
                     setText("");
-                } catch (err) { alert("Lỗi lưu: " + err.message); }
+                } catch (err) {
+                    alert("Lỗi lưu dữ liệu. Đảm bảo tab Rules trên Firebase đã được cập nhật!");
+                }
             };
 
             const groupedNotes = useMemo(() => {
@@ -100,44 +106,67 @@
                 }, {});
             }, [notes]);
 
-            if (loading) return <div className="flex h-screen items-center justify-center font-bold">ĐANG TẢI...</div>;
+            if (loading) return (
+                <div className="flex h-screen items-center justify-center bg-gray-50">
+                    <div className="flex flex-col items-center gap-4">
+                        <div className="w-12 h-12 border-4 border-blue-600 border-t-transparent rounded-full animate-spin"></div>
+                        <p className="text-blue-600 font-bold tracking-tighter uppercase text-sm">Đang kết nối Cloud...</p>
+                    </div>
+                </div>
+            );
 
             if (!user) return (
-                <div className="flex h-screen flex-col items-center justify-center p-6 text-center">
-                    <h1 className="text-3xl font-black mb-4">TIMELINE NOTES</h1>
-                    <button onClick={() => auth.signInWithPopup(provider)} className="bg-white border p-4 rounded-2xl shadow-sm flex items-center gap-2 font-bold">
-                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="20" />
-                        Đăng nhập bằng Google
+                <div className="flex h-screen flex-col items-center justify-center p-6 text-center bg-white">
+                    <div className="w-20 h-20 bg-blue-600 rounded-[2rem] mb-6 shadow-2xl shadow-blue-200 flex items-center justify-center text-white text-4xl font-black italic">T</div>
+                    <h1 className="text-3xl font-black mb-2 tracking-tighter uppercase text-gray-900">My Timeline</h1>
+                    <p className="text-gray-400 mb-10 max-w-xs text-sm leading-relaxed font-light">Lưu trữ văn bản theo dòng thời gian cá nhân của riêng bạn.</p>
+                    <button onClick={handleLogin} className="flex items-center gap-4 bg-white border border-gray-100 px-8 py-4 rounded-2xl shadow-xl hover:shadow-2xl hover:-translate-y-1 transition-all duration-300 font-bold text-gray-700">
+                        <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" width="22" />
+                        Tiếp tục với Google
                     </button>
                 </div>
             );
 
             return (
-                <div className="max-w-xl mx-auto pb-32">
-                    <header className="sticky top-0 bg-white/70 backdrop-blur-md px-6 py-4 flex justify-between items-center z-30 border-b border-gray-100">
+                <div className="max-w-xl mx-auto pb-40 px-2 min-h-screen">
+                    <header className="sticky top-0 bg-white/70 backdrop-blur-lg px-6 py-5 flex justify-between items-center z-30 border-b border-gray-50 rounded-b-[2rem]">
                         <div className="flex items-center gap-3">
-                            <img src={user.photoURL} className="w-8 h-8 rounded-full" />
-                            <h1 className="font-extrabold tracking-tighter uppercase">Dòng thời gian</h1>
+                            <img src={user.photoURL} className="w-10 h-10 rounded-full border-2 border-white shadow-md" />
+                            <h1 className="text-lg font-extrabold tracking-tighter uppercase text-gray-800">Timeline</h1>
                         </div>
-                        <button onClick={() => auth.signOut()} className="text-[10px] text-gray-400">Đăng xuất</button>
+                        <button onClick={handleLogout} className="text-[9px] font-black text-gray-400 hover:text-red-500 bg-gray-50 hover:bg-red-50 px-4 py-2 rounded-xl transition-all tracking-widest uppercase">Đăng xuất</button>
                     </header>
 
-                    <main className="px-4 mt-4">
-                        {Object.keys(groupedNotes).length === 0 && (
-                            <div className="text-center py-20 text-gray-300 italic text-sm">Chưa có ghi chú nào của bạn được hiển thị.</div>
+                    <main className="px-2 mt-2">
+                        {notes.length === 0 && (
+                            <div className="text-center py-32 opacity-20 flex flex-col items-center">
+                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={1} stroke="currentColor" className="w-20 h-20 mb-4">
+                                    <path strokeLinecap="round" strokeLinejoin="round" d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10" />
+                                </svg>
+                                <p className="text-sm italic">Hôm nay có gì mới không?</p>
+                            </div>
                         )}
+
                         {Object.keys(groupedNotes).map(date => (
-                            <div key={date} className="mb-8">
-                                <h2 className="sticky-date py-2 text-xs font-black text-gray-400 uppercase tracking-widest">{date}</h2>
-                                <div className="space-y-4 mt-2">
+                            <div key={date} className="mb-10">
+                                <h2 className="sticky-date py-4 text-[10px] font-black text-gray-400 uppercase tracking-[0.4em] ml-4 drop-shadow-sm">
+                                    {date}
+                                </h2>
+                                <div className="space-y-5">
                                     {groupedNotes[date].map(note => (
-                                        <div key={note.id} className="bg-white p-5 rounded-3xl shadow-sm border border-gray-100 group relative">
-                                            <div className="text-[10px] font-bold text-blue-500 mb-2">{note.time}</div>
-                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap">{note.content}</p>
-                                            <button 
-                                                onClick={() => confirm('Xóa?') && db.collection("notes").doc(note.id).delete()}
-                                                className="absolute top-4 right-4 opacity-0 group-hover:opacity-100 text-red-300 text-[10px]"
-                                            >Xóa</button>
+                                        <div key={note.id} className="note-card bg-white p-7 rounded-[2.5rem] shadow-[0_4px_20px_rgba(0,0,0,0.02)] border border-gray-50 transition-all hover:shadow-xl hover:border-blue-50 relative group">
+                                            <div className="flex justify-between items-center mb-4">
+                                                <span className="text-[10px] font-black text-blue-500 bg-blue-50 px-3 py-1 rounded-full uppercase tracking-tighter">{note.time}</span>
+                                                <button 
+                                                    onClick={() => confirm('Xóa vĩnh viễn?') && db.collection("notes").doc(note.id).delete()} 
+                                                    className="delete-btn opacity-0 text-gray-300 hover:text-red-500 transition-all p-1"
+                                                >
+                                                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" strokeWidth={2} stroke="currentColor" className="w-4 h-4">
+                                                        <path strokeLinecap="round" strokeLinejoin="round" d="M6 18L18 6M6 6l12 12" />
+                                                    </svg>
+                                                </button>
+                                            </div>
+                                            <p className="text-gray-700 leading-relaxed whitespace-pre-wrap font-light text-[15.5px] tracking-tight">{note.content}</p>
                                         </div>
                                     ))}
                                 </div>
@@ -145,15 +174,18 @@
                         ))}
                     </main>
 
-                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50">
-                        <form onSubmit={handleSubmit} className="max-w-xl mx-auto relative flex items-center bg-white shadow-2xl rounded-3xl p-2 border border-gray-100">
-                            <input 
-                                value={text} onChange={(e) => setText(e.target.value)}
-                                placeholder="Viết gì đó..."
-                                className="flex-1 px-4 outline-none text-gray-700 bg-transparent"
+                    <div className="fixed bottom-0 left-0 right-0 p-6 bg-gradient-to-t from-gray-50 via-gray-50/95 to-transparent z-40">
+                        <form onSubmit={handleSubmit} className="max-w-xl mx-auto relative">
+                            <textarea 
+                                value={text} 
+                                onChange={(e) => setText(e.target.value)}
+                                onKeyDown={(e) => { if(e.key === 'Enter' && !e.shiftKey) { e.preventDefault(); handleSubmit(e); } }}
+                                placeholder="Viết vài dòng cho hôm nay..."
+                                className="w-full bg-white shadow-[0_25px_60px_-15px_rgba(0,0,0,0.12)] rounded-[2.5rem] p-7 pr-20 outline-none border border-transparent focus:border-blue-100 transition-all resize-none min-h-[80px] max-h-48 text-[15.5px] font-light"
+                                rows="1"
                             />
-                            <button className="bg-blue-600 text-white w-10 h-10 rounded-2xl flex items-center justify-center">
-                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-5 h-5"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
+                            <button className="absolute right-4 bottom-4 bg-blue-600 text-white w-14 h-14 rounded-[1.8rem] flex items-center justify-center hover:bg-blue-700 shadow-xl shadow-blue-200 transition-all active:scale-90 hover:-rotate-12">
+                                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" className="w-7 h-7"><path d="M3.478 2.405a.75.75 0 00-.926.94l2.432 7.905H13.5a.75.75 0 010 1.5H4.984l-2.432 7.905a.75.75 0 00.926.94 60.519 60.519 0 0018.445-8.986.75.75 0 000-1.218A60.517 60.517 0 003.478 2.405z" /></svg>
                             </button>
                         </form>
                     </div>
@@ -161,9 +193,8 @@
             );
         }
 
-            const root = ReactDOM.createRoot(document.getElementById('root'));
-            root.render(<App />);
+        const root = ReactDOM.createRoot(document.getElementById('root'));
+        root.render(<App />);
     </script>
 </body>
 </html>
-
